--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
       <a href="/posts" class="nav__link" data-link>포스트</a>
       <a href="/settings" class="nav__link" data-link>설정</a>
     </nav>
+    <div id="app"></div>
     <script type="module" src="/static/js/index.js"></script>
   </body>
 </html>
